Fixed an issue of multiple overflows created double scrollbars

--- a/src/components/DiscoveryCard.module.scss
+++ b/src/components/DiscoveryCard.module.scss
@@ -32,7 +32,7 @@
     transition: 0.8s;
     height: 240px;
     box-shadow: 0 1px 35px 0 #000;
-    overflow: scroll
+    overflow: auto
 }
 
 .movieCardText div:not(.englishTitle) {
